<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reflection</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_post">Create new Post</string>
    <string name="title_settings">Settings</string>
    <string name="title_section_account">Account</string>
    <string name="title_section_terms">Terms</string>
    <string name="title_section_home">Home</string>
    <string name="title_section_post">Create a Post</string>
    <string name="title_section_settings">Settings</string>
    <string name="label_frequency">Select frequency of reflection</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="two_weeks">Two weeks</string>
    <string name="month">Month</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_back">Back</string>
    <string name="button_reflect">Answer Question</string>
    <string name="button_personal">Add Personal Reflection</string>
    <string name="button_submit">Submit</string>
    <string name="button_photo">Photo</string>
    <string name="username">Username</string>
    <string name="lastLogin">Last Login</string>
    <string name="personalReflections">Personal Reflections: </string>

</resources>
