<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/bottom_bar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="end"
        android:background="#d7d7d7">
    </LinearLayout>
    <ImageView
        android:id="@+id/button_submit"
        android:contentDescription="@string/button_submit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/circle_grey"
        android:layout_marginRight="24dp"/>
    <ImageView
        android:id="@+id/button_photo"
        android:contentDescription="@string/button_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/circle_blue"
        android:layout_marginRight="106dp"/>
    <ImageView
        android:id="@+id/button_back_arrow"
        android:contentDescription="@string/button_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="22dp"
        android:layout_marginLeft="12dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/abc_ic_ab_back_holo_light"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar">
        <LinearLayout
            android:orientation="vertical"
            android:background="#f0f0f0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="#ffffff"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"

                android:padding="24dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/label_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#666666"
                    tools:text="Title:"/>
                <!--
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/personal_title"
                    tools:text="Insert Title"/> -->
            </LinearLayout>
            <LinearLayout
                android:background="#ffffff"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:padding="24dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/label_response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#666666"
                    tools:text="Reflection:"/>
                <!--
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/response_text"/>-->
            </LinearLayout>
            <LinearLayout
                android:background="#ffffff"
                android:padding="24dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.parse.ParseImageView
                    android:id="@+id/item_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    tools:src="@drawable/ic_launcher"
                    android:scaleType="fitCenter"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>